--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                 <div class="color-image">
                     <img src="assets/news-letter-bg.png" alt="">
                     <div class="email-area">
+                        <p class="join-flower-group text-center">Join the colorful Bunch</p>
                         <input type="email" placeholder="write email">
                         <button class="btn-secondary">Subcribe</button>
                     </div>
@@ -184,6 +185,41 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container flex gap-3 justify-between">
+            <div class="footer-logo">
+                <img src="assets/logo.png" alt="">
+                <p class="footer-logo-des">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                </p>
+            </div>
+            <div class="footer-itams-first">
+                <ul class="secondary-color ">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact US</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Blog</a></li>
+                </ul>
+
+            </div>
+            <div class="footer-itams-first">
+                <ul class="secondary-color">
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="icon-img flex">
+                <img src="assets/icon-facebook.png" alt="">
+                <img src="assets/icon-linkedin.png" alt="">
+                <img src="assets/icon-youtube.png" alt="">
+                <img src="assets/icon-twitter.png" alt="">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
