card button update

--- a/index.html
+++ b/index.html
@@ -65,49 +65,49 @@
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                     <div class="card">
                         <img src="assets/sample-flower-image.png" alt="sample-flower">
                         <h3 class="card-title text-lg font-semibold">Lily Blossom</h3>
                         <h2 class="card-price text-xl font-bold">20 USD</h2>
-                        <input class="btn-primary" type="button" value="ADD TO CARD">
+                        <button class="btn-primary">Add To Cart</button>
                     </div>
                 </div>
             </div>
